[package]
name = "ruscheme"
version = "0.1.0"
authors = ["Mert Erden <merden01@eecs.tufts.edu>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
nom = "7.1.1"
structopt = "0.3.26"
rustyline = "9.1.2"
rustyline-derive = "0.6.0"
quick-error = "2.0.1"
